Fix unreachable dark mode button on sidebar template

--- a/css/sass/modules/_header.scss
+++ b/css/sass/modules/_header.scss
@@ -36,8 +36,7 @@ header {
 
   header {
     border-bottom: 1px solid var(--border-color);
-    display: flex;
-    justify-content: center;
+    color: var(--link-color);
     font-family: $font--main;
     margin-bottom: $spacing * 2;
     padding-bottom: $spacing;
@@ -46,11 +45,12 @@ header {
     /* ie fix */
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
       border-bottom: 1px solid c('black');
+      color: c('black');
     }
   }
   .brand {
     display: block;
-    margin: 0 auto;
+    margin-right: $spacing;
 
     svg {
       fill: var(--link-color);
@@ -72,14 +72,8 @@ header {
       color: c('black');
     }
   }
-  .site-mode-toggle {
-    align-self: center;
-    font-size: $font__size--s;
-    margin-top: $spacing * 2;
-
-    button {
-      color: var(--text-color);
-    }
+  .site-mode-toggle button {
+    color: var(--link-color);
   }
 }
 .page-child #sidebarNav {
